Have AccountHolderController return a WrapperDTO<AccountHolder>